<resources>
    <string name="app_name">Whats App</string>
    <string name="chat">CHAT</string>
    <string name="state">ESTADOS</string>
    <string name="call">LLAMADAS</string>
    <string name="grup1">Grupo clase</string>
    <string name="message">+34 666 13 54 78: Thanks</string>
    <string name="family">Family</string>
    <string name="lastM">Dad: Doesn\'t work!</string>
    <string name="friend">Carolina</string>
    <string name="friendM">-Cool!</string>
    <string name="newGroup">Nuevo grupo</string>
    <string name="newDif">Nuevo difusión</string>
    <string name="device">Dispositivos vinculados</string>
    <string name="messageD">Mensajes destacados</string>
    <string name="sett">Ajustes</string>
</resources>